<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunTracker2</string>
    <string name="run_fragment_started">Started:</string>
    <string name="run_id">Run #%1d</string>
    <string name="position">%1$s Lat., %2$s Long.</string>
    <string name="starting_position">Start Point:</string>
    <string name="starting_altitude">Start Alt.:</string>
    <string name="elapsed_time">Duration:</string>
    <string name="run_fragment_ended">Ended:</string>
    <string name="ending_position">End Point:</string>
    <string name="ending_altitude">End Alt.:</string>
    <string name="error_number">Attempt to connect with Google Play Services failed with Error
        Number %1$d, errno
    </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="list_distance_text">Distance: %1$s</string>
    <string name="list_duration_text">Duration: %1$s</string>
    <string name="new_run">New Run</string>
    <string name="sort">Sort Runs</string>
    <string name="by_date_asc">Ascending Date</string>
    <string name="by_date_desc">Descending Date</string>
    <string name="default_channel">Default Notification Channel</string>
    <string name="by_distance_asc">Ascending Distance</string>
    <string name="by_distance_desc">Descending Distance</string>
    <string name="by_duration_asc">Ascending Duration</string>
    <string name="by_duration_desc">Descending Duration</string>
    <string name="no_runs_recorded">No Runs Recorded</string>
    <plurals name="viewpager_subtitle_date_asc">
        <item quantity="one">One Run</item>
        <item quantity="other">Run %1$d of %2$d, Date, Ascending</item>
    </plurals>
    <plurals name="recycler_subtitle_date_asc">
        <item quantity="one">One Run</item>
        <item quantity="other">%1$d Runs, Asc. Date</item>
    </plurals>
    <plurals name="viewpager_subtitle_date_desc">
        <item quantity="one">One Run</item>
        <item quantity="other">Run %1$d of %2$d, Desc. Date</item>
    </plurals>
    <plurals name="recycler_subtitle_date_desc">
        <item quantity="one">One Run</item>
        <item quantity="other">%1$d Runs, Desc. Date</item>
    </plurals>
    <plurals name="viewpager_subtitle_distance_asc">
        <item quantity="one">One Run</item>
        <item quantity="other">Run %1$d of %2$d, Asc. Dist.</item>
    </plurals>
    <plurals name="recycler_subtitle_distance_asc">
        <item quantity="one">One Run</item>
        <item quantity="other">%1$d Runs, Asc. Dist.</item>
    </plurals>
    <plurals name="viewpager_subtitle_distance_desc">
        <item quantity="one">One Run</item>
        <item quantity="other">Run %1$d of %2$d, Desc. Dist.</item>
    </plurals>
    <plurals name="recycler_subtitle_distance_desc">
        <item quantity="one">One Run</item>
        <item quantity="other">%1$d Runs, Desc. Dist.</item>
    </plurals>
    <plurals name="viewpager_subtitle_duration_asc">
        <item quantity="one">One Run</item>
        <item quantity="other">Run %1$d of %2$d, Asc. Dur.</item>
    </plurals>
    <plurals name="recycler_subtitle_duration_asc">
        <item quantity="one">One Run</item>
        <item quantity="other">%1$d Runs, Asc. Dur.</item>
    </plurals>
    <plurals name="viewpager_subtitle_duration_desc">
        <item quantity="one">One Run</item>
        <item quantity="other">Run %1$d of %2$d, Desc. Dur.</item>
    </plurals>
    <plurals name="recycler_subtitle_duration_desc">
        <item quantity="one">One Run</item>
        <item quantity="other">%1$d Runs, Desc. Dur.</item>
    </plurals>
    <plurals name="deletion_dialog_message">
        <item quantity="one">Delete this Run?</item>
        <item quantity="other">Delete the %1$d selected Runs?</item>
    </plurals>
    <string name="goof_up">You must have goofed up somewhere!</string>
    <string name="no_runs">No runs are recorded. Get out and get moving! Press the button below or
        select "New Run" from the overflow menu to record a run.
    </string>
    <string name="notification_title">Run Monitor</string>
    <string name="notification_text">Your run is being monitored in the background</string>
    <string name="run_start">Run Start</string>
    <string name="run_finish">Run Finish</string>
    <string name="delete_run">Delete Run</string>
    <string name="distance_covered">Distance:</string>
    <string name="current_location_too_distant">You are more than 100 meters from where this run
        originally ended; you can\'t \"continue\" it from here. Cancelling further
        tracking of this run.\n
    </string>
    <string name="location_insert_failed">Insertion of location for Run %1$d failed!\n</string>
    <string name="duration_and_distance_update_failure">Error updating Distance and Duration for Run %1$d.\n</string>
    <string name="update_run_start_date_success">Successfully updated Starting Date</string>
    <string name="update_run_start_date_failed">Starting Date update failed! No rows were updated!
    </string>
    <string name="update_run_start_address_success">Successfully updated Starting Address</string>
    <string name="update_run_start_address_failed">Starting Address update failed! No rows were
        updated!
    </string>
    <string name="multiple_start_addresses_error">Starting Address update failed! Multiple rows were
        updated!
    </string>
    <string name="unknown_start_address_error">Error! Unknown return value from Starting Address
        update!
    </string>
    <string name="multiple_runs_dates_updated">Starting Date and Starting Address update failed!
        Multiple rows were updated!
    </string>
    <string name="unknown_start_date_error">Error! Unknown return value from Starting Date update!
    </string>
    <string name="update_run_end_address_success">Successfully updated End Address for Run</string>
    <string name="update_end_address_failed">Ending Address update failed! No rows were updated!
    </string>
    <string name="multiple_runs_end_addresses_updated">Ending Address update failed! Multiple rows
        were updated!
    </string>
    <string name="unknown_end_address_update_error">Error! Unknown return value from Ending Address
        update!
    </string>
    <string name="delete_run_success">Run %1$d successfully deleted.\n</string>
    <string name="delete_run_error">There was an error attempting to delete Run %1$d.\n</string>
    <string name="delete_run_failure">Run %1$d was not deleted.\n</string>
    <string name="delete_run_unexpected_return">Unexpected return value while attempting to delete Run %1$d.\n</string>
    <string name="update_run_error">Error updating Run!</string>
    <string name="delete_locations_error">There was an error deleting locations associated with Run %1$d.\n</string>
    <plurals name="location_deletion_results">
        <item quantity="zero">No locations associated with Run %2$d were deleted.\n\n</item>
        <item quantity="one">One location associated with Run %2$d was deleted.\n\n</item>
        <item quantity="other">%1$d locations associated with Run %2$d were deleted.\n\n </item>
    </plurals>
    <plurals name="runs_deletion_results">
        <item quantity="zero">Failed to delete any Runs!\n\n</item>
        <item quantity="one">Deleted %1$d Run, together with %2$d associated Locations.\n\n</item>
        <item quantity="other">A total of %1$d Runs were deleted, together with %2$d associated locations.\n\n</item>
    </plurals>
    <string name="insert_run_error">Error inserting new Run! Error code %1$d</string>
    <string name="starting_address">Start Address:</string>
    <string name="ending_address">End Address:</string>
    <string name="lastlocation_null">Geocoder location is null!</string>
    <string name="get_address_function_unavailable">Geocoding currently unavailable.</string>
    <string name="geocoder_io_error">IO error in geocoder!</string>
    <string name="geocoder_bad_argument_error">Bad latitude or longitude argument!</string>
    <string name="map_view">Map View</string>
    <string name="show_entire_route">Show Entire Route</string>
    <string name="track_end_point">Track End Point</string>
    <string name="track_start_point">Track Starting Point</string>
    <string name="tracking_off">Tracking Off</string>
    <string name="empty_view_button_text">Press here to start recording a run!</string>
    <string name="connection_suspended_service_disconnected">GoogleApiClient connection suspended -
        Remote service disconnected! Trying to fix…
    </string>
    <string name="connection_suspended_network_lost">GoogleApiClient suspended - network connection
        lost! Trying to fix …
    </string>
    <string name="run_list_run_number">Run #%1$d, RunID #%2$d</string>
    <string name="imperial">Switch to Metric</string>
    <string name="metric">Switch to Imperial</string>
    <string name="map_scrolling_on">Turn Scrolling On</string>
    <string name="map_scrolling_off">Turn Scrolling Off</string>
    <string name="settings_menu">Settings</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_headless">HeadlessActivity</string>
    <string name="shared_prefs">com.dknutsonlaw.android.runtracker2.shared_prefs</string>
    <string name="authorities">com.dknutsonlaw.android.runtracker2</string>
    <string name="ok">OK</string>
</resources>
